# pycalc

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/error/: errors.py
src/evaluator/: evaluator.py
src/lexer/: lexer.py  tokens.py
src/parser/: ast.py  parser.py
src/repl/: repl.py
