[project]
name = "pycalc"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["mypy>=1.19.1", "pre-commit>=4.5.1", "ruff>=0.14.10"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
